Add classic message processing
When enabled (`ProcessMessages=Yes`, default), process messages in the same
way as Cactus 2001 does. In particular, this allows people to build
cactuses by forwarding themselves a planet with VPA.

--- a/cactus.ini
+++ b/cactus.ini
@@ -8,6 +8,10 @@
 # When disabled, the cactus will be destroyed.
 KeepCactus = No
 
+# When enabled, process "classic" messages.
+# When disabled, only messages through PHost's command processor will be interpreted.
+ProcessMessages = Yes
+
 
 ## Scoring
 
